--- a/DemoWindow/MainWindow.xaml
+++ b/DemoWindow/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="523" Width="686"
-        x:Name="MainApplicationWindow" WindowStartupLocation="CenterScreen">
+        x:Name="MainApplicationWindow" WindowStartupLocation="CenterScreen" IsColorPickerEnabled="False">
     <Grid>
         <Menu Height="23" VerticalAlignment="Top">
             <MenuItem x:Name="ColorPicker" Header="Theme" ItemsSource="{Binding Source={x:Static my:ExpressionWindow.AvailableThemeColors}}" MenuItem.Click="ColorPicker_Click" />
