--- a/DemoWindow/MainWindow.xaml
+++ b/DemoWindow/MainWindow.xaml
@@ -2,10 +2,15 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="523" Width="686"
-        x:Name="MainApplicationWindow" WindowStartupLocation="CenterScreen" IsColorPickerEnabled="False">
+        x:Name="MainApplicationWindow" WindowStartupLocation="CenterScreen" IsColorPickerEnabled="True">
     <Grid>
         <Menu Height="23" VerticalAlignment="Top">
             <MenuItem x:Name="ColorPicker" Header="Theme" ItemsSource="{Binding Source={x:Static my:ExpressionWindow.AvailableThemeColors}}" MenuItem.Click="ColorPicker_Click" />
+            <MenuItem Header="MenuItem 2">
+                <MenuItem Header="MenuItem 3" />
+                <Separator />
+                <MenuItem Header="MenuItem 4" />
+            </MenuItem>
         </Menu>
         <DatePicker Height="24" Width="150" SelectedDateFormat="Long" Margin="12,232,342,54" />
         <Button Content="Button" Height="23" HorizontalAlignment="Left" Margin="12,39,0,0" Name="button1" VerticalAlignment="Top" Width="75" Click="button1_Click" />
