--- a/DemoWindow/MainWindow.xaml
+++ b/DemoWindow/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<my:ExpressionWindow xmlns:my="clr-namespace:ThemedWindows;assembly=ExpressionWindow"  x:Class="TEST.MainWindow"
+﻿<EW:ExpressionWindow xmlns:EW="clr-namespace:ThemedWindows;assembly=ExpressionWindow"  x:Class="TEST.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="523" Width="686"
         x:Name="MainApplicationWindow" WindowStartupLocation="CenterScreen" IsColorPickerEnabled="True">
     <Grid>
         <Menu Height="23" VerticalAlignment="Top">
-            <MenuItem x:Name="ColorPicker" Header="Theme" ItemsSource="{Binding Source={x:Static my:ExpressionWindow.AvailableThemeColors}}" MenuItem.Click="ColorPicker_Click" />
+            <MenuItem x:Name="ColorPicker" Header="Theme" ItemsSource="{Binding Source={x:Static EW:ExpressionWindow.AvailableThemeColors}}" MenuItem.Click="ColorPicker_Click" />
             <MenuItem Header="MenuItem 2">
                 <MenuItem Header="MenuItem 3" />
                 <Separator />
@@ -40,6 +40,7 @@
                 <Grid />
             </TabItem>
         </TabControl>
+        <EW:NumericUpDown Margin="377,339,66,104" />
         <RadioButton Content="RadioButton" Height="16" HorizontalAlignment="Left" Margin="146,271,0,0" Name="radioButton1" VerticalAlignment="Top" />
         <RadioButton Content="RadioButton" Height="16" HorizontalAlignment="Left" Margin="251,271,0,0" Name="radioButton2" VerticalAlignment="Top" />
         <Slider Height="23" HorizontalAlignment="Left" Margin="146,145,0,0" Name="slider1" VerticalAlignment="Top" Width="100" />
@@ -56,4 +57,4 @@
         <ProgressBar Height="24" HorizontalAlignment="Left" Margin="172,195,0,0" Name="progressBar1" VerticalAlignment="Top" Width="174" Value="50" />
         <ScrollViewer HorizontalAlignment="Left" Height="98" Margin="55,310,0,0" VerticalAlignment="Top" Width="256"/>
     </Grid>
-</my:ExpressionWindow>
+</EW:ExpressionWindow>
