--- a/ExpressionWindow/Themes/Sources/Colors/Blue.xaml
+++ b/ExpressionWindow/Themes/Sources/Colors/Blue.xaml
@@ -1,12 +1,19 @@
-<!-- Main Colors -->
+﻿<ResourceDictionary
+  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  mc:Ignorable="d"
+  xmlns:d="http://schemas.microsoft.com/expression/blend/2008">
+    
+    <!-- Main Colors -->
 
-<Color x:Key="MainColor">#FFBBBB00</Color>
-<Color x:Key="HoverColor">#FF999900</Color>
-<Color x:Key="BorderColor">#FFAAAA00</Color>
+<Color x:Key="MainColor">#FF006D99</Color>
+<Color x:Key="HoverColor">#FF007DFF</Color>
+<Color x:Key="BorderColor">#FF004D99</Color>
 <Color x:Key="DefaultColor">#FF9BB1C5</Color>
-<Color x:Key="LightColor">#FFDDDD00</Color>
-<Color x:Key="DarkColor">#FF777700</Color>
-<Color x:Key="ControlMouseOverColor">#33BBBB00</Color>
+<Color x:Key="LightColor">#FF0033FF</Color>
+<Color x:Key="DarkColor">#FF003366</Color>
+<Color x:Key="ControlMouseOverColor">#550055FF</Color>
 
 <SolidColorBrush x:Key="MainLightBrush" Color="{StaticResource LightColor}" />
 <SolidColorBrush x:Key="MainDarkBrush" Color="{StaticResource DarkColor}" />
@@ -14,19 +21,19 @@
 <SolidColorBrush x:Key="ShadeBrush" Color="#FF434343" />
 
 <LinearGradientBrush x:Key="ShinyGradient" EndPoint="0.5,1" StartPoint="0.5,0">
-    <GradientStop Color="{StaticResource LightColor}" Offset="0" />
-    <GradientStop Color="{StaticResource HoverColor}" Offset="0.5" />
-    <GradientStop Color="{StaticResource MainColor}" Offset="0.5" />
-    <GradientStop Color="{StaticResource BorderColor}" Offset="1" />
+    <GradientStop Color="{StaticResource HoverColor}" Offset="0" />
+    <GradientStop Color="{StaticResource LightColor}" Offset="0.5" />
+    <GradientStop Color="#FF002A88" Offset="0.5" />
+    <GradientStop Color="#FF003AAA" Offset="1" />
 </LinearGradientBrush>
 
-<LinearGradientBrush x:Key="ProgressBarIndicatorAnimatedFill" StartPoint="0,0" EndPoint="1,0" Opacity="0.6">
+<LinearGradientBrush x:Key="ProgressBarIndicatorAnimatedFill" StartPoint="0,0" EndPoint="1,0" Opacity="0.3">
     <LinearGradientBrush.GradientStops>
         <GradientStopCollection>
-            <GradientStop Color="#00FFFFFF" Offset="0" />
+            <GradientStop Color="#00000000" Offset="0" />
             <GradientStop Color="{StaticResource LightColor}" Offset="0.45" />
             <GradientStop Color="{StaticResource LightColor}" Offset="0.55" />
-            <GradientStop Color="#00FFFFFF" Offset="1" />
+            <GradientStop Color="#00000000" Offset="1" />
         </GradientStopCollection>
     </LinearGradientBrush.GradientStops>
 </LinearGradientBrush>
@@ -71,3 +78,4 @@
 <SolidColorBrush x:Key="DisabledBackgroundBrush" Color="#FF787878" />
 <SolidColorBrush x:Key="DisabledBorderBrush" Color="#AAA" />
 <SolidColorBrush x:Key="WindowBackgroundBrush" Color="#FF595959" />
+</ResourceDictionary>
