--- a/DemoWindow/MainWindow.xaml
+++ b/DemoWindow/MainWindow.xaml
@@ -1,20 +1,21 @@
-﻿<EW:ExpressionWindow xmlns:EW="clr-namespace:ThemedWindows;assembly=ExpressionWindow"  x:Class="TEST.MainWindow"
+﻿<EW:ExpressionWindow xmlns:EW="clr-namespace:ThemedWindows;assembly=ExpressionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Controls="clr-namespace:ThemedWindows.Controls;assembly=ExpressionWindow"  x:Class="TEST.MainWindow"
         Title="MainWindow" Height="523" Width="686"
-        x:Name="MainApplicationWindow" WindowStartupLocation="CenterScreen" IsColorPickerEnabled="True">
+        x:Name="MainApplicationWindow" WindowStartupLocation="CenterScreen" IsColorPickerEnabled="False">
     <Grid>
         <Menu Height="23" VerticalAlignment="Top">
-            <MenuItem x:Name="ColorPicker" Header="Theme" ItemsSource="{Binding Source={x:Static EW:ExpressionWindow.AvailableThemeColors}}" MenuItem.Click="ColorPicker_Click" />
+            <MenuItem x:Name="ColorPicker" Header="Theme" ItemsSource="{Binding Source={x:Static EW:ExpressionWindow.AvailableThemeColors}}" Click="ColorPicker_Click" />
             <MenuItem Header="MenuItem 2">
                 <MenuItem Header="MenuItem 3" />
                 <Separator />
                 <MenuItem Header="MenuItem 4" />
             </MenuItem>
         </Menu>
-        <DatePicker Height="24" Width="150" SelectedDateFormat="Long" Margin="96,326,432,143" />
-        <Button Content="Button" HorizontalAlignment="Left" Margin="12,39,0,0" Name="button1" VerticalAlignment="Top" Click="button1_Click" />
-        <ListBox Height="100" HorizontalAlignment="Left" Margin="12,68,0,0" Name="listBox1" VerticalAlignment="Top" Width="120">
+        <DatePicker Height="24" Width="150" SelectedDateFormat="Long" Margin="377,395,151,74" />
+        <Button Content="Button" HorizontalAlignment="Left" Margin="12,39,0,0" x:Name="button1" VerticalAlignment="Top" Click="button1_Click" />
+        <ListBox Height="100" HorizontalAlignment="Left" Margin="12,68,0,0" x:Name="listBox1" VerticalAlignment="Top" Width="120">
             <ListBoxItem Content="stuff" />
             <ListBoxItem Content="stuff"/>
             <ListBoxItem Content="stuff" />
@@ -26,25 +27,24 @@
             <ListBoxItem/>
             <ListBoxItem/>
         </ListBox>
-        <CheckBox Content="CheckBox" Height="16" HorizontalAlignment="Left" Margin="12,262,0,0" Name="checkBox1" VerticalAlignment="Top" />
-        <ComboBox Height="23" HorizontalAlignment="Left" Margin="12,174,0,0" Name="comboBox1" VerticalAlignment="Top" Width="120">
+        <CheckBox Content="CheckBox" Height="16" HorizontalAlignment="Left" Margin="12,262,0,0" x:Name="checkBox1" VerticalAlignment="Top" />
+        <ComboBox HorizontalAlignment="Left" Margin="12,174,0,0" x:Name="comboBox1" VerticalAlignment="Top" Width="120">
             <ComboBoxItem Content="dfghdfgh" />
             <ComboBoxItem Content="shshshs" />
         </ComboBox>
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="12,203,0,0" Name="textBox1" VerticalAlignment="Top" Width="120" />
-        <TabControl Height="100" HorizontalAlignment="Left" Margin="146,36,0,0" Name="tabControl1" VerticalAlignment="Top" Width="200">
-            <TabItem Header="tabItem1" Name="tabItem1">
+        <TextBox HorizontalAlignment="Left" Margin="12,203,0,0" x:Name="textBox1" VerticalAlignment="Top" Width="120" />
+        <TabControl Height="100" HorizontalAlignment="Left" Margin="146,36,0,0" x:Name="tabControl1" VerticalAlignment="Top" Width="200">
+            <TabItem Header="tabItem1" x:Name="tabItem1">
                 <Grid />
             </TabItem>
-            <TabItem Header="tabItem2" Name="tabItem2">
+            <TabItem Header="tabItem2" x:Name="tabItem2">
                 <Grid />
             </TabItem>
         </TabControl>
-        <EW:NumericUpDown Margin="377,339,66,104" />
-        <RadioButton Content="RadioButton" Height="16" HorizontalAlignment="Left" Margin="146,271,0,0" Name="radioButton1" VerticalAlignment="Top" />
-        <RadioButton Content="RadioButton" Height="16" HorizontalAlignment="Left" Margin="251,271,0,0" Name="radioButton2" VerticalAlignment="Top" />
-        <Slider Height="23" HorizontalAlignment="Left" Margin="146,145,0,0" Name="slider1" VerticalAlignment="Top" Width="100" />
-        <TreeView Height="80" HorizontalAlignment="Left" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Visible" Margin="362,56,0,0" Name="treeView1" VerticalAlignment="Top" Width="157">
+        <RadioButton Content="RadioButton" Height="16" HorizontalAlignment="Left" Margin="146,271,0,0" x:Name="radioButton1" VerticalAlignment="Top" />
+        <RadioButton Content="RadioButton" Height="16" HorizontalAlignment="Left" Margin="251,271,0,0" x:Name="radioButton2" VerticalAlignment="Top" />
+        <Slider Height="23" HorizontalAlignment="Left" Margin="146,145,0,0" x:Name="slider1" VerticalAlignment="Top" Width="100" />
+        <TreeView Height="80" HorizontalAlignment="Left" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Visible" Margin="362,56,0,0" x:Name="treeView1" VerticalAlignment="Top" Width="157">
             <TreeViewItem Header="fhjfghjfghj">
                 <TreeViewItem Header="ghfjgj" />
             </TreeViewItem>
@@ -53,9 +53,10 @@
         <ScrollViewer Margin="541,56,66,372" HorizontalScrollBarVisibility="Visible" VerticalScrollBarVisibility="Visible" />
         <ScrollBar Margin="12,433,332,43" Orientation="Horizontal" RenderTransformOrigin="0.438,2.412" />
         <ScrollBar Margin="657,56,4,43" />
-        <Calendar Height="170" HorizontalAlignment="Left" Margin="432,145,0,0" Name="calendar1" VerticalAlignment="Top" Width="180" />
-        <ProgressBar Height="24" HorizontalAlignment="Left" Margin="172,195,0,0" Name="progressBar1" VerticalAlignment="Top" Width="174" Value="50" />
+        <Calendar Height="170" HorizontalAlignment="Left" Margin="432,145,0,0" x:Name="calendar1" VerticalAlignment="Top" Width="180" />
+        <ProgressBar Height="24" HorizontalAlignment="Left" Margin="172,195,0,0" x:Name="progressBar1" VerticalAlignment="Top" Width="174" Value="50" />
         <ScrollViewer HorizontalAlignment="Left" Height="98" Margin="55,310,0,0" VerticalAlignment="Top" Width="256"/>
         <EW:ColorButton Content="Color" BackgroundColor="Green" HorizontalAlignment="Left" Margin="83,39,0,0" VerticalAlignment="Top"/>
+        <Controls:NumericUpDown HorizontalAlignment="Left" Margin="377,344,0,0" VerticalAlignment="Top" Width="207" Minimum="0" Maximum="10" Height="23" />
     </Grid>
 </EW:ExpressionWindow>
