--- a/ExpressionWindow/Themes/BlueColors.xaml
+++ b/ExpressionWindow/Themes/BlueColors.xaml
@@ -355,7 +355,7 @@
       Value="{StaticResource TextBrush}" />
     <Setter
       Property="BorderBrush"
-      Value="{StaticResource NormalBrush}" />
+      Value="{StaticResource NormalBorderBrush}" />
     <Setter
       Property="Focusable"
       Value="False" />
@@ -590,7 +590,7 @@
       Value="{StaticResource TextBrush}" />
     <Setter
       Property="BorderBrush"
-      Value="{StaticResource NormalBrush}" />
+      Value="{StaticResource NormalBorderBrush}" />
     <Setter
       Property="Focusable"
       Value="False" />
@@ -817,7 +817,7 @@
     TargetType="{x:Type Controls:NumericUpDown}">
     <Setter
       Property="BorderBrush"
-      Value="{StaticResource NormalBrush}" />
+      Value="{StaticResource NormalBorderBrush}" />
     <Setter
       Property="Background"
       Value="{StaticResource BackgroundBrush}" />
@@ -2822,7 +2822,7 @@
       Value="1" />
   </Style>
   <Style
-    TargetType="{x:Type local:ColorButton}"
+    TargetType="{x:Type Controls:ColorButton}"
     BasedOn="{x:Null}">
     <Setter
       Property="Foreground"
@@ -2840,7 +2840,7 @@
       Property="Template">
       <Setter.Value>
         <ControlTemplate
-          TargetType="{x:Type local:ColorButton}">
+          TargetType="{x:Type Controls:ColorButton}">
           <ControlTemplate.Resources>
             <Storyboard
               x:Key="HoverOn">
@@ -6460,7 +6460,7 @@
             <ScrollViewer
               Margin="0"
               x:Name="PART_ContentHost"
-              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+              HorizontalAlignment="Stretch"
               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
               Cursor="IBeam" />
           </Border>
@@ -7337,7 +7337,7 @@
             </Grid.RowDefinitions>
             <Border
               CornerRadius="2,2,0,0"
-              Background="{StaticResource LightBrush}"
+              Background="Transparent"
               x:Name="border">
               <TabPanel
                 x:Name="HeaderPanel"
@@ -7379,13 +7379,13 @@
               </TabPanel>
             </Border>
             <Border
+              Background="{StaticResource LightBrush}"
               x:Name="ContentPanel"
               Grid.Column="0"
               Grid.Row="1"
               KeyboardNavigation.DirectionalNavigation="Contained"
               KeyboardNavigation.TabIndex="2"
               KeyboardNavigation.TabNavigation="Local"
-              Background="{StaticResource ShadeBrush}"
               CornerRadius="0,0,2,2">
               <ContentPresenter
                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
@@ -7393,6 +7393,7 @@
                 ContentSource="SelectedContent" />
             </Border>
             <Border
+              BorderBrush="{StaticResource NormalBrush}"
               HorizontalAlignment="Stretch"
               VerticalAlignment="Stretch"
               Width="Auto"
@@ -7417,10 +7418,6 @@
                     Y="0" />
                 </TransformGroup>
               </Border.LayoutTransform>
-              <Border.BorderBrush>
-                <SolidColorBrush
-                  Color="{StaticResource MainColor}" />
-              </Border.BorderBrush>
             </Border>
           </Grid>
           <ControlTemplate.Triggers>
@@ -8900,47 +8897,13 @@
               Grid.ColumnSpan="4"
               Grid.RowSpan="4"
               Background="{StaticResource LightBrush}"
-              CornerRadius="4,4,4,4"
-              BorderThickness="1,1,1,1" />
+              BorderThickness="1" />
             <Border
               Grid.ColumnSpan="4"
               Grid.Row="1"
               Grid.RowSpan="3"
-              BorderThickness="1,1,1,1"
-              CornerRadius="4"
-              BorderBrush="{StaticResource NormalBorderBrush}">
-              <Border.OpacityMask>
-                <MultiBinding
-                  Converter="{StaticResource BorderGapMaskConverter}"
-                  ConverterParameter="7">
-                  <Binding
-                    Path="ActualWidth"
-                    ElementName="Header" />
-                  <Binding
-                    Path="ActualWidth"
-                    RelativeSource="{RelativeSource Self}" />
-                  <Binding
-                    Path="ActualHeight"
-                    RelativeSource="{RelativeSource Self}" />
-                </MultiBinding>
-              </Border.OpacityMask>
-              <Border
-                BorderThickness="{TemplateBinding BorderThickness}"
-                CornerRadius="3">
-                <Border.BorderBrush>
-                  <SolidColorBrush
-                    Color="{StaticResource MainColor}" />
-                </Border.BorderBrush>
-                <Border
-                  BorderThickness="{TemplateBinding BorderThickness}"
-                  CornerRadius="2">
-                  <Border.BorderBrush>
-                    <SolidColorBrush
-                      Color="{StaticResource MainColor}" />
-                  </Border.BorderBrush>
-                </Border>
-              </Border>
-            </Border>
+              BorderThickness="1"
+              BorderBrush="{StaticResource NormalBorderBrush}" />
             <Border
               Grid.Column="0"
               Grid.ColumnSpan="4"
@@ -8948,27 +8911,23 @@
               Grid.RowSpan="3"
               Background="{TemplateBinding Background}"
               BorderBrush="Transparent"
-              BorderThickness="{TemplateBinding BorderThickness}"
-              CornerRadius="4" />
+              BorderThickness="{TemplateBinding BorderThickness}" />
             <Border
               Grid.ColumnSpan="4"
               Grid.RowSpan="2"
               Background="{StaticResource NormalBrush}"
               BorderThickness="1,1,1,0"
-              CornerRadius="2,2,0,0"
               x:Name="Main"
               BorderBrush="{StaticResource NormalBorderBrush}" />
             <Rectangle
               Opacity="1"
               Stroke="{x:Null}"
-              RadiusX="3"
-              RadiusY="3"
               VerticalAlignment="Stretch"
               Height="Auto"
               x:Name="Shine"
               Grid.ColumnSpan="4"
               Grid.RowSpan="2"
-              Margin="1,1,1,1">
+              Margin="1">
               <Rectangle.Fill>
                 <LinearGradientBrush
                   EndPoint="0.5,0.971"
